[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Assets/UserInterface/CharacterSelect/RedhatSelect.png" type="Texture" id=1]
[ext_resource path="res://src/Assets/UserInterface/CharacterSelect/WarriorSelect.png" type="Texture" id=2]
[ext_resource path="res://src/Assets/Font/joystix_dynamic16.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/Assets/Button/Left-Arrow.png" type="Texture" id=4]
[ext_resource path="res://src/Assets/Button/Right-Arrow.png" type="Texture" id=5]
[ext_resource path="res://src/UserInterface/SelectCharacter/SelectCharacter.gd" type="Script" id=6]
[ext_resource path="res://src/Assets/Font/joystix_dynamic24.tres" type="DynamicFont" id=7]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.12549, 0.141176, 0.192157, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 1
shadow_color = Color( 0.2, 0.227451, 0.309804, 1 )
shadow_size = 3
shadow_offset = Vector2( 0.2, 0.2 )

[node name="SelectCharacter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.157501
margin_right = 0.157471
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -160.0
margin_top = 26.8701
margin_right = 160.0
margin_bottom = 55.8701
custom_fonts/font = ExtResource( 7 )
text = "Select Character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContainerCharacter" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -416.0
margin_top = -32.5
margin_right = 416.0
margin_bottom = 32.5
rect_min_size = Vector2( 832, 0 )

[node name="Redhat" type="TextureRect" parent="ContainerCharacter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -27.0
margin_top = -29.5
margin_right = 27.0
margin_bottom = 29.5
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warrior" type="TextureRect" parent="ContainerCharacter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 42.5
margin_top = -29.5
margin_right = 97.5
margin_bottom = 29.5
texture = ExtResource( 2 )

[node name="Container" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -103.0
margin_top = 43.8788
margin_right = 103.0
margin_bottom = 79.8788
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left-Arrrow" type="TextureButton" parent="Container"]
margin_right = 36.0
margin_bottom = 36.0
texture_normal = ExtResource( 4 )

[node name="PanelNameChar" type="Panel" parent="Container"]
margin_left = 40.0
margin_top = 5.0
margin_right = 165.0
margin_bottom = 30.0
rect_min_size = Vector2( 125, 25 )
size_flags_vertical = 4
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameCharacter" type="Label" parent="Container/PanelNameChar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -58.0
margin_top = -10.0
margin_right = 58.0
margin_bottom = 10.0
custom_fonts/font = ExtResource( 3 )
text = "Redhat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right-Arrow" type="TextureButton" parent="Container"]
margin_left = 169.0
margin_right = 206.0
margin_bottom = 36.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenCharacter" type="Tween" parent="."]

[node name="EnterGame" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = 117.071
margin_right = 71.0
margin_bottom = 143.071
custom_fonts/font = ExtResource( 3 )
text = "Enter Game"

[connection signal="pressed" from="Container/Left-Arrrow" to="." method="_on_LeftArrrow_pressed"]
[connection signal="pressed" from="Container/Right-Arrow" to="." method="_on_RightArrow_pressed"]
[connection signal="pressed" from="EnterGame" to="." method="_on_EnterGame_pressed"]
